--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<br><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <img id=bigbanner src="https://web.archive.org/web/20091027124327im_/http://www.geocities.com/eyes_wide_open_01/ln_a_bluelite.gif">
   <div class=all>
+   
   <h1>Personality Test</h1>
   <div class="body">
   <div class="description">
@@ -68,7 +70,7 @@
 
       <br>
       <div class="submit">
-        <button type="submit">Submit</button>
+        <button id=sub type="submit">Submit</button>
       </div>
 
     </div>
@@ -78,8 +80,31 @@
 </div>
 <div class="p">
  
-</div> </div>
+  <img id=photoone src="https://web.archive.org/web/20091024001733im_/http://geocities.com/area51/shire/6843/parafast.gif">
+  
+  <img id=phototwo src="https://web.archive.org/web/20091024001733im_/http://geocities.com/area51/shire/6843/parafast.gif">
+  
+  <img id=photothree src="https://web.archive.org/web/20091025211822im_/http://geocities.com/manifest_evil/brain.gif">
+  
+   <img id=photofour src="https://web.archive.org/web/20091025211822im_/http://geocities.com/manifest_evil/brain.gif">
+  
+  <p id=secondpagelink>Enter your code below to reveal your personality traits.</p>
+  
+<form id=form onsubmit="redirectToPage(event)">
 
+        <div class="submit">
+          <label for="codeform"></label>
+          <input type="text" id="codetype" name="codeform" />
+          <button id=formbutton type="submit">Submit</button> 
+        </div>
+      </form>
+</div> 
+  
+</div>
+  <br>
+  <br>
+  <br>
+<img id=lastbanner src="https://web.archive.org/web/20091024171720im_/http://geocities.com/Yosemite/Meadows/1968/images/graphics/rainln.gif">
   <script src="script.js"></script>
 </body>
 </html>
