--- a/index.html
+++ b/index.html
@@ -78,15 +78,17 @@
 
   <p id="result"></p> 
 </div>
-<div class="p">
+
+  
+
+<div class="image-wrapper">
+    <img id="photoone" src="https://web.archive.org/web/20091024001733im_/http://geocities.com/area51/shire/6843/parafast.gif">
+    <img id="phototwo" src="https://web.archive.org/web/20091024001733im_/http://geocities.com/area51/shire/6843/parafast.gif">
+    <img id="photothree" src="https://web.archive.org/web/20091025211822im_/http://geocities.com/manifest_evil/brain.gif">
+    <img id="photofour" src="https://web.archive.org/web/20091025211822im_/http://geocities.com/manifest_evil/brain.gif">
+  </div>
  
-  <img id=photoone src="https://web.archive.org/web/20091024001733im_/http://geocities.com/area51/shire/6843/parafast.gif">
-  
-  <img id=phototwo src="https://web.archive.org/web/20091024001733im_/http://geocities.com/area51/shire/6843/parafast.gif">
-  
-  <img id=photothree src="https://web.archive.org/web/20091025211822im_/http://geocities.com/manifest_evil/brain.gif">
-  
-   <img id=photofour src="https://web.archive.org/web/20091025211822im_/http://geocities.com/manifest_evil/brain.gif">
+
   
   <p id=secondpagelink>Enter your code below to reveal your personality traits.</p>
   
