--- a/rcoai.html
+++ b/rcoai.html
@@ -14,11 +14,12 @@
     <div class="description">
           Something tells me you have very good grades. People describe you as lovely, quiet, and intelligent. All you need is an extrovert friend to balance you out!
 </div>
-<div class="image">
+<div class="img">
+    <img src="https://web.archive.org/web/20091022175359im_/http://geocities.com/so_sweet_aus/mushroom002.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
