--- a/rcoan.html
+++ b/rcoan.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media0.giphy.com/media/kvrvnB158J4fm/giphy.webp?cid=790b76115us0aed79bol28n5jmw2ulnblp76bstzth4kktwr&ep=v1_gifs_search&rid=giphy.webp&ct=g">
+    <img src="https://web.archive.org/web/20090727212345im_/http://es.geocities.com/roldan_ma/Globos/fairyinflowerg.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
