--- a/rcoen.html
+++ b/rcoen.html
@@ -15,7 +15,7 @@
           <p> You are as stubborn as a rock, but you would make a great asset to the military! I suggest you enlist in the marines today. I hope you make it out alive! Some other RCOEN's include Putin and Mike from Breaking Bad. </p>
 </div>
 <div class="image">
-    <img src="https://media.giphy.com/media/IGRgt7Xcuxitq/giphy.gif">
+    <img src="https://web.archive.org/web/20090829201447im_/http://www.geocities.com/yorkvilleamericanlegion/military_private_salute_flag_waving_lg_wht.gif">
 </div>
 
 <div class="p">
