--- a/rcoei.html
+++ b/rcoei.html
@@ -15,7 +15,7 @@
           <p> You are smart, but you're probably a douchebag. Some other RCOEI's are Bill Gates and Thanos. I sincerely hope you don't get rich because you will use your power to exploit the working class and wreak havoc upon the poor.</p>
 </div>
 <div class="image">
-    <img src="https://media1.tenor.com/images/1f943c7d49ca3aaf3b62fb0de4c7c4e3/tenor.gif?itemid=5322498">
+    <img src="https://web.archive.org/web/20090902143928im_/http://geocities.com/~dale_white/cybernerd.gif">
 </div>
 
 <div class="p">
