--- a/rcuei.html
+++ b/rcuei.html
@@ -16,7 +16,7 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExOXh5b3k3MnVrb3g2ajBwMDFkYmpmaDZzNjA5dnpiaGdiYzVjdzRsYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/7dQPaxyfkXMtiuImWd/giphy.gif">
+    <img src="https://web.archive.org/web/20091027142000im_/http://geocities.com/sadhate/new6.gif">
 </div>
 
 <div class="p">
