--- a/rloai.html
+++ b/rloai.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media1.tenor.com/m/NUJowC9dOsUAAAAC/stay-cool.gif">
+    <img src="https://web.archive.org/web/20090806155747im_/http://www.geocities.com/brerfoxkaleidscope/sad_clown.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
