--- a/rloan.html
+++ b/rloan.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media1.tenor.com/m/3E7w1XCYwJQAAAAC/anxiety-scared.gif">
+    <img src="https://web.archive.org/web/20091026213124/http://www.geocities.com/flyingriks/informatik/index-info.html">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
