--- a/rloen.html
+++ b/rloen.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWJ6a3JwcHE5MmVlMjM3YWdpMGRld3kzNDkwd3g3Y28zenA2dzV5MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oKHWpCbZXdgg3zSzm/giphy.gif">
+    <img src="https://web.archive.org/web/20090727205952im_/http://www.geocities.com/hayloz_angel/mizzperfectblinkie.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> 
     
   </body>
