--- a/rluai.html
+++ b/rluai.html
@@ -16,11 +16,11 @@
 
     <div class="image">
         <br>
-        <img src="https://media.tenor.com/nNqHtgs7Ja8AAAAi/herve-depression.gif" alt="Depression gif">
+        <img src="https://web.archive.org/web/20091023081236im_/http://geocities.com/BourbonStreet/Delta/2811/crypig.gif" alt="Depression gif">
     </div>
 
     <div class="p">
-        <a href="mainpage.html">Return to Homepage</a>
+        <a href="index.html">Return to Homepage</a>
     </div>
 
 </body>
