--- a/rluan.html
+++ b/rluan.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media.tenor.com/mRyWA9hEpREAAAAM/mui-goku-manga.gif">
+    <img src="https://web.archive.org/web/20091020040856im_/http://geocities.com/Colosseum/Dome/8412/images/muscles.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
