--- a/rluei.html
+++ b/rluei.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://c.tenor.com/icFB4ogOwbYAAAAM/patrick-bateman-sigma.gif">
+    <img src="https://web.archive.org/web/20091027002041im_/http://us.geocities.com/kingbat_2000/brain.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
