--- a/rluen.html
+++ b/rluen.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fsports&psig=AOvVaw2Z2Uf9hmtoJ4CblOSMvZYo&ust=1741377919975000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCLDi17Sg9osDFQAAAAAdAAAAABAE">
+    <img src="https://web.archive.org/web/20091022180048im_/http://www.geocities.com/williampetersen7/detective_crime_scene_md_wht.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
