--- a/scoai.html
+++ b/scoai.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media1.tenor.com/images/003d1b70e30e7be2c8d3eb3e92fac2bf/tenor.gif?itemid=11900843">
+    <img src="https://web.archive.org/web/20091028181227im_/http://www.geocities.com/~tinkerbella/angelunisex_fae_ani_sm_square.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
