--- a/scoei.html
+++ b/scoei.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://i.gifer.com/embedded/download/2O5v.gif">
+    <img src="https://web.archive.org/web/20090829171231im_/http://www.geocities.com/widowsonpha/moneyflipp.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
