--- a/scoen.html
+++ b/scoen.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media.tenor.com/oJVE9OXB438AAAAM/pointing-at-you-lebron-james.gif">
+    <img src="https://web.archive.org/web/20091021110648im_/http://www.geocities.com/buhsmsm/clipart_sciencemedicine_022.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
