--- a/rcuan.html
+++ b/rcuan.html
@@ -16,7 +16,7 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fyes-master-clips&psig=AOvVaw11WG6k485spPBV7hZHMNl4&ust=1741381128150000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCKi3qK6s9osDFQAAAAAdAAAAABAQ">
+    <img src="https://web.archive.org/web/20090724062427im_/http://ar.geocities.com/goldoro2004/images/romantico_50.gif">
 </div>
 
 <div class="p">
