--- a/rloei.html
+++ b/rloei.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fbeth-harmon-chess&psig=AOvVaw09X_Hcl96P454XCOVyAOQL&ust=1741378390634000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCMC5o5Wi9osDFQAAAAAdAAAAABAE">
+    <img src="https://web.archive.org/web/20030806140045/http://uk.geocities.com:80/brown_addict/pictures/HeroinAddiction.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
