--- a/scoan.html
+++ b/scoan.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media2.giphy.com/media/l3q2Irb72fcXsT1wk/giphy.gif?cid=6c09b9527z81g9yy8twzietc9s4biqc0plejpxx6ay3uz7ic&ep=v1_gifs_search&rid=giphy.gif&ct=g">
+    <img src="https://web.archive.org/web/20090728194227im_/http://www.geocities.com/princesslandry1980/helok.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
