--- a/scuai.html
+++ b/scuai.html
@@ -16,7 +16,8 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://i.makeagif.com/media/10-08-2019/SlXQqh.gif">
+    <img src="">
+    <img src="https://web.archive.org/web/20091027012236im_/http://geocities.com/butterflymath2003/ani_haha.gif">
 </div>
 
 <div class="p">
