--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   
 
     
-    <p>© 1999-2005 AngelinasEPICquiz.com | <a href="https://angelinaxie.my.canva.site/">See my other work</a></p>
+    <p><span style="display: flex; justify-content: center">© 1999-2005 AngelinasEPICquiz.com | <a href="https://angelinaxie.my.canva.site/">See my other work</a></span></p>
     <img id=fire src="https://web.archive.org/web/20090726183900im_/http://mx.geocities.com/wardeathcommandos/FLAMES20.gif">
   <script src="script.js"></script>
 </body>
