--- a/scuan.html
+++ b/scuan.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://i.pinimg.com/originals/79/ca/31/79ca3189a09e1d475ffe43170944a295.gif">
+    <img src="https://web.archive.org/web/20090808141558im_/http://geocities.com/goddesslit/fairy.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
