--- a/scuei.html
+++ b/scuei.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media1.tenor.com/m/3V5mLErNeqwAAAAd/better-call-saul-saul-goodman.gif">
+    <img src="https://web.archive.org/web/20090728011759im_/http://es.geocities.com/the_evilboy/Visitas/Back02.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
