--- a/scuen.html
+++ b/scuen.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://giffiles.alphacoders.com/622/62263.gif">
+    <img src="https://web.archive.org/web/20091027044211im_/http://geocities.com/ooklathepunk/skankin.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
