--- a/sloan.html
+++ b/sloan.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://y.yarn.co/5a314729-ea32-4b0e-9c49-d0ca1ed0d7b7_text.gif">
+    <img src="https://web.archive.org/web/20091022134228im_/http://www.geocities.com/wcsrandyj05/wife.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
