--- a/sloei.html
+++ b/sloei.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media3.giphy.com/media/dUqa9cPVAYIKu6xWq6/giphy.gif?cid=6c09b952jhz2nsytqjhawwk0kjjhijyedy7bqaejkc200gvu&ep=v1_gifs_search&rid=giphy.gif&ct=g">
+    <img src="https://web.archive.org/web/20091027074448im_/http://www.geocities.com/veronaffachapter/president_george_washington_1_md_wht.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
