--- a/sloen.html
+++ b/sloen.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media3.giphy.com/media/3otPoqhuCZYmuLfiTK/giphy.gif?cid=6c09b952tustbw7jhb8agzmcz3anvwg4xf80ovx3hxp33f6o&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g">
+    <img src="https://web.archive.org/web/20091022020042im_/http://www.geocities.com/drjiffyjamz/EViL_EMPiRE/DeAtHgOrE66.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
