--- a/sluai.html
+++ b/sluai.html
@@ -16,12 +16,12 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media1.tenor.com/m/Ssxw_mfG17YAAAAd/markiplier.gif">
+    <img src="https://web.archive.org/web/20091027103633im_/http://hk.geocities.com/sweetcandy1hk/fly_music.gif">
 
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
