--- a/sluei.html
+++ b/sluei.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image"> 
     <br>
-    <img src="https://media.tenor.com/SlZY7llSw_EAAAAM/skeletor-laughs-in-evil-laughing-myah-myaah-dasmemeistgut.gif">
+    <img src="https://web.archive.org/web/20091027162127im_/http://www.geocities.com/ginasworld88/dancinbaybay.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
