--- a/sloai.html
+++ b/sloai.html
@@ -16,12 +16,12 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://media2.giphy.com/media/q7RXis7FsSRWgG41uu/giphy.gif?cid=6c09b952dij1j4nfnaz06vh8cvcp3bqnmaltgfmiy84gunpo&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g">
+    <img src="https://web.archive.org/web/20090830101430im_/http://geocities.com/FamousUSA/Baseball_Pic/LAstudyMove04.gif">
 
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
