--- a/sluan.html
+++ b/sluan.html
@@ -16,11 +16,11 @@
 </div>
 <div class="image">
     <br>
-    <img src="https://img1.picmix.com/output/stamp/normal/5/7/9/3/2193975_210b8.gif">
+    <img src="https://web.archive.org/web/20091022091022im_/http://www.geocities.com/merlin_topgun3000/coolplanepic.gif">
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
