--- a/sluen.html
+++ b/sluen.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="p">
-    <a href="mainpage.html">Return to Homepage</a>
+    <a href="index.html">Return to Homepage</a>
   </div> </div>
     
   </body>
