--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
     #result {
       display: flex;
       justify-content: center;
-      font-family: impact;
+      font-family: timesnewroman;
       font-size: 20px;
-      color: rgb(0, 255, 224);
+      background-color: yellow;
+      color: rgb(255, 0, 255);
     }
     
     #fire {
@@ -114,9 +115,11 @@
     #secondpagelink {
       display: flex;
       justify-content: center;
-      font-family: impact;
+      font-family: timesnewroman;
       font-size: 20px;
-      color: rgb(0, 255, 224);
+      color: rgb(255, 0, 234);
+      background-color: yellow;
+      margin: 3px;
     }
   </style>
 </head>
@@ -145,7 +148,7 @@
         </div>
         <br>
        
-        <p><span style="font-size: 20px; font-family: impact; justify-content: center; display: flex; color: rgb(97, 255, 0)"> Read each sentence below and determine if you agree with the statement.</span></p>
+        <p><span style="font-size: 20px; font-family: timesnewroman; margin: 3px; justify-content: center; display: flex; color: rgb(251, 0, 255); background-color: yellow"> Read each sentence below and determine if you agree with the statement.</span></p>
 
         <form id="quizForm">
           <div class="quiz">
